[gd_scene load_steps=2 format=3 uid="uid://d0al4th2j6glm"]

[ext_resource type="Script" path="res://main.gd" id="1_vjp27"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjp27")

[node name="GodotWrapper" type="GodotWrapper" parent="."]

[node name="PipelinedWrapper" type="PipelinedWrapper" parent="."]

[node name="LoadProgram" type="Button" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 104.0
offset_right = 443.0
offset_bottom = 216.0
text = "Load program"

[node name="NextCycle" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 106.0
offset_right = 681.0
offset_bottom = 218.0
text = "Next cycle"

[connection signal="pressed" from="LoadProgram" to="." method="_on_load_program_pressed"]
[connection signal="pressed" from="NextCycle" to="." method="_on_next_cycle_pressed"]
